결제사유 업데이트
결제사유 업데이트

--- a/정기상품__결제대기_상태안내_.html
+++ b/정기상품__결제대기_상태안내_.html
@@ -25,54 +25,86 @@
     <div id="base" class="">
 
       <!-- Unnamed (Image) -->
-      <div id="u252" class="ax_default image">
-        <img id="u252_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u121.png"/>
+      <div id="u248" class="ax_default image">
+        <img id="u248_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u121.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u253" class="ax_default image">
-        <img id="u253_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u137.png"/>
+      <div id="u249" class="ax_default image">
+        <img id="u249_img" class="img " src="images/다운로드_상품__잔여곡수_추가_/u137.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u254" class="ax_default box_1">
-        <div id="u254_div" class=""></div>
+      <div id="u250" class="ax_default box_1">
+        <div id="u250_div" class=""></div>
       </div>
 
       <!-- Unnamed (자동결제 실패사유) -->
 
       <!-- Unnamed (Table) -->
-      <div id="u256" class="ax_default table">
+      <div id="u252" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u253" class="ax_default table_cell">
+          <img id="u253_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <div id="u253_text" class="text ">
+            <p><span>No.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u254" class="ax_default table_cell">
+          <img id="u254_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <div id="u254_text" class="text ">
+            <p><span>프론트에 노출될 에러메시지</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u255" class="ax_default table_cell">
+          <img id="u255_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u255_text" class="text ">
+            <p><span>1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u256" class="ax_default table_cell">
+          <img id="u256_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u256_text" class="text ">
+            <p><span>소액결제 이용 차단 또는 이용불가&nbsp; &nbsp; &nbsp; </span></p>
+          </div>
+        </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u257" class="ax_default table_cell">
-          <img id="u257_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <img id="u257_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u257_text" class="text ">
-            <p><span>결제실패 코드</span></p>
+            <p><span>2</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u258" class="ax_default table_cell">
-          <img id="u258_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <img id="u258_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u258_text" class="text ">
-            <p><span>빌링시스템 문구</span></p>
+            <p><span>결제수단 정보 및 가입자 정보 불일치 </span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u259" class="ax_default table_cell">
-          <img id="u259_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <img id="u259_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u259_text" class="text ">
-            <p><span>POQ 결제 실패[[414] </span></p>
+            <p><span>3</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u260" class="ax_default table_cell">
-          <img id="u260_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <img id="u260_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u260_text" class="text ">
-            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+            <p><span>한도 초과 또는 잔액부족</span></p>
           </div>
         </div>
 
@@ -80,7 +112,7 @@
         <div id="u261" class="ax_default table_cell">
           <img id="u261_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u261_text" class="text ">
-            <p><span>POQ 결제 실패[[1002]</span></p>
+            <p><span>4</span></p>
           </div>
         </div>
 
@@ -88,7 +120,7 @@
         <div id="u262" class="ax_default table_cell">
           <img id="u262_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u262_text" class="text ">
-            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+            <p><span>요금미납&nbsp; &nbsp;&nbsp; </span></p>
           </div>
         </div>
 
@@ -96,7 +128,7 @@
         <div id="u263" class="ax_default table_cell">
           <img id="u263_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u263_text" class="text ">
-            <p><span>POQ 결제 실패[[1003]</span></p>
+            <p><span>5</span></p>
           </div>
         </div>
 
@@ -104,188 +136,124 @@
         <div id="u264" class="ax_default table_cell">
           <img id="u264_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u264_text" class="text ">
-            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+            <p><span>분실, 해지 또는 사용정지된 휴대폰 </span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u265" class="ax_default table_cell">
-          <img id="u265_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <img id="u265_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u265_text" class="text ">
-            <p><span>POQ 결제 실패[[1006]</span></p>
+            <p><span>6</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u266" class="ax_default table_cell">
-          <img id="u266_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <img id="u266_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u266_text" class="text ">
-            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+            <p><span>분실, 도난 또는 거래불가 카드</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u267" class="ax_default table_cell">
-          <img id="u267_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <img id="u267_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
           <div id="u267_text" class="text ">
-            <p><span>POQ 결제 실패[[1018]</span></p>
+            <p><span>7</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u268" class="ax_default table_cell">
-          <img id="u268_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <img id="u268_img" class="img " src="images/정기상품__결제대기_상태안내__2/u226.png"/>
           <div id="u268_text" class="text ">
-            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u269" class="ax_default table_cell">
-          <img id="u269_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u269_text" class="text ">
-            <p><span>POQ 결제 실패[[1025]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u270" class="ax_default table_cell">
-          <img id="u270_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u270_text" class="text ">
-            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u271" class="ax_default table_cell">
-          <img id="u271_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u271_text" class="text ">
-            <p><span>POQ 결제 실패[[1032]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u272" class="ax_default table_cell">
-          <img id="u272_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u272_text" class="text ">
-            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u273" class="ax_default table_cell">
-          <img id="u273_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u273_text" class="text ">
-            <p><span>POQ 결제 실패[[1071]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u274" class="ax_default table_cell">
-          <img id="u274_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u274_text" class="text ">
-            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u275" class="ax_default table_cell">
-          <img id="u275_img" class="img " src="images/정기상품__결제대기_상태안내__2/u229.png"/>
-          <div id="u275_text" class="text ">
-            <p><span>...</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u276" class="ax_default table_cell">
-          <img id="u276_img" class="img " src="images/정기상품__결제대기_상태안내__2/u230.png"/>
-          <div id="u276_text" class="text ">
-            <p><span>상세케이스 추가 확인필요</span></p>
+            <p><span>기타 - 고객센터로 문의해 주세요.</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u277" class="ax_default paragraph">
-        <div id="u277_div" class=""></div>
+      <div id="u269" class="ax_default paragraph">
+        <div id="u269_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u278" class="ax_default box_1">
-        <img id="u278_img" class="img " src="images/정기상품__결제대기_상태안내_/u278.png"/>
+      <div id="u270" class="ax_default box_1">
+        <img id="u270_img" class="img " src="images/정기상품__결제대기_상태안내_/u270.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u279" class="ax_default image">
-        <img id="u279_img" class="img " src="images/정기상품__결제대기_상태안내_/u279.png"/>
+      <div id="u271" class="ax_default image">
+        <img id="u271_img" class="img " src="images/정기상품__결제대기_상태안내_/u271.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u280" class="ax_default box_1">
-        <img id="u280_img" class="img " src="images/정기상품__결제대기_상태안내_/u280.png"/>
+      <div id="u272" class="ax_default box_1">
+        <img id="u272_img" class="img " src="images/정기상품__결제대기_상태안내_/u272.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u281" class="ax_default paragraph">
-        <div id="u281_div" class=""></div>
-        <div id="u281_text" class="text ">
+      <div id="u273" class="ax_default paragraph">
+        <div id="u273_div" class=""></div>
+        <div id="u273_text" class="text ">
           <p><span>사용중인 이용권이 없습니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u282" class="ax_default image">
-        <img id="u282_img" class="img " src="images/정기상품__결제대기_상태안내_/u282.png"/>
+      <div id="u274" class="ax_default image">
+        <img id="u274_img" class="img " src="images/정기상품__결제대기_상태안내_/u274.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u283" class="ax_default box_1">
-        <img id="u283_img" class="img " src="images/정기상품__결제대기_상태안내_/u283.png"/>
+      <div id="u275" class="ax_default box_1">
+        <img id="u275_img" class="img " src="images/정기상품__결제대기_상태안내_/u275.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u284" class="ax_default image">
-        <img id="u284_img" class="img " src="images/정기상품__결제대기_상태안내_/u284.png"/>
+      <div id="u276" class="ax_default image">
+        <img id="u276_img" class="img " src="images/정기상품__결제대기_상태안내_/u276.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u285" class="ax_default box_1">
-        <img id="u285_img" class="img " src="images/정기상품__결제대기_상태안내_/u285.png"/>
+      <div id="u277" class="ax_default box_1">
+        <img id="u277_img" class="img " src="images/정기상품__결제대기_상태안내_/u277.png"/>
       </div>
 
       <!-- Unnamed (Image) -->
-      <div id="u286" class="ax_default image">
-        <img id="u286_img" class="img " src="images/정기상품__결제대기_상태안내_/u286.png"/>
+      <div id="u278" class="ax_default image">
+        <img id="u278_img" class="img " src="images/정기상품__결제대기_상태안내_/u278.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u287" class="ax_default box_1">
-        <img id="u287_img" class="img " src="images/정기상품__결제대기_상태안내_/u287.png"/>
+      <div id="u279" class="ax_default box_1">
+        <img id="u279_img" class="img " src="images/정기상품__결제대기_상태안내_/u279.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u288" class="ax_default paragraph">
-        <div id="u288_div" class=""></div>
-        <div id="u288_text" class="text ">
-          <p><span>※ 현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. (사유 : $결제수단 명의변경)</span></p>
+      <div id="u280" class="ax_default paragraph">
+        <div id="u280_div" class=""></div>
+        <div id="u280_text" class="text ">
+          <p><span>※ 현재 정기 상품의 자동 결제가 정상 처리되지 않아 결제대기입니다. </span></p><p><span>(사유 : $결제수단 명의변경)</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u289" class="ax_default box_1">
-        <div id="u289_div" class=""></div>
+      <div id="u281" class="ax_default box_1">
+        <div id="u281_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u290" class="ax_default box_1">
-        <div id="u290_div" class=""></div>
-        <div id="u290_text" class="text ">
+      <div id="u282" class="ax_default box_1">
+        <div id="u282_div" class=""></div>
+        <div id="u282_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u290_ann" class="annotation"></div>
+      <div id="u282_ann" class="annotation"></div>
     </div>
   </body>
 </html>
