--- a/정기상품__결제대기_상태안내__1.html
+++ b/정기상품__결제대기_상태안내__1.html
@@ -25,243 +25,211 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u291" class="ax_default box_1">
+      <div id="u283" class="ax_default box_1">
+        <div id="u283_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u284" class="ax_default box_1">
+        <div id="u284_div" class=""></div>
+        <div id="u284_text" class="text ">
+          <p><span>Status Bar</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Horizontal Line) -->
+      <div id="u285" class="ax_default line">
+        <img id="u285_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u196.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u286" class="ax_default heading_1">
+        <div id="u286_div" class=""></div>
+        <div id="u286_text" class="text ">
+          <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u287" class="ax_default image">
+        <img id="u287_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u198.png"/>
+      </div>
+
+      <!-- Unnamed (Horizontal Line) -->
+      <div id="u288" class="ax_default line">
+        <img id="u288_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u289" class="ax_default box_1">
+        <div id="u289_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u290" class="ax_default heading_1">
+        <div id="u290_div" class=""></div>
+        <div id="u290_text" class="text ">
+          <p><span>[정기] MP3 30</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u291" class="ax_default heading_1">
         <div id="u291_div" class=""></div>
+        <div id="u291_text" class="text ">
+          <p><span>현재 정기 상품의 자동 결제가 정상 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u292" class="ax_default box_1">
         <div id="u292_div" class=""></div>
         <div id="u292_text" class="text ">
-          <p><span>Status Bar</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u293" class="ax_default line">
-        <img id="u293_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u196.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u294" class="ax_default heading_1">
-        <div id="u294_div" class=""></div>
-        <div id="u294_text" class="text ">
-          <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u295" class="ax_default image">
-        <img id="u295_img" class="img " src="images/다운로드_상품__잔여곡수_추가__1/u198.png"/>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u296" class="ax_default line">
-        <img id="u296_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u297" class="ax_default box_1">
-        <div id="u297_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u298" class="ax_default heading_1">
-        <div id="u298_div" class=""></div>
-        <div id="u298_text" class="text ">
-          <p><span>[정기] MP3 30</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u299" class="ax_default heading_1">
-        <div id="u299_div" class=""></div>
-        <div id="u299_text" class="text ">
-          <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u300" class="ax_default box_1">
-        <div id="u300_div" class=""></div>
-        <div id="u300_text" class="text ">
           <p><span style="font-family:'나눔고딕';font-weight:400;">정기 상품을 이용 중이나, 명의변경, 번호변경 등의 문제로 정기 상품의 결제가 정상적으로 이루어 지지 않았을 경우 </span><span style="font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';font-weight:600;text-decoration:underline;">현상태 및 사유 안내 추가</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u301" class="ax_default box_1">
-        <div id="u301_div" class=""></div>
-        <div id="u301_text" class="text ">
+      <div id="u293" class="ax_default box_1">
+        <div id="u293_div" class=""></div>
+        <div id="u293_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u301_ann" class="annotation"></div>
+      <div id="u293_ann" class="annotation"></div>
 
       <!-- Unnamed (자동결제 실패사유) -->
 
       <!-- Unnamed (Table) -->
-      <div id="u303" class="ax_default table">
+      <div id="u295" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u296" class="ax_default table_cell">
+          <img id="u296_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <div id="u296_text" class="text ">
+            <p><span>No.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u297" class="ax_default table_cell">
+          <img id="u297_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <div id="u297_text" class="text ">
+            <p><span>프론트에 노출될 에러메시지</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u298" class="ax_default table_cell">
+          <img id="u298_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u298_text" class="text ">
+            <p><span>1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u299" class="ax_default table_cell">
+          <img id="u299_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u299_text" class="text ">
+            <p><span>소액결제 이용 차단 또는 이용불가&nbsp; &nbsp; &nbsp; </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u300" class="ax_default table_cell">
+          <img id="u300_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u300_text" class="text ">
+            <p><span>2</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u301" class="ax_default table_cell">
+          <img id="u301_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u301_text" class="text ">
+            <p><span>결제수단 정보 및 가입자 정보 불일치 </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u302" class="ax_default table_cell">
+          <img id="u302_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u302_text" class="text ">
+            <p><span>3</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u303" class="ax_default table_cell">
+          <img id="u303_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u303_text" class="text ">
+            <p><span>한도 초과 또는 잔액부족</span></p>
+          </div>
+        </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u304" class="ax_default table_cell">
-          <img id="u304_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <img id="u304_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u304_text" class="text ">
-            <p><span>결제실패 코드</span></p>
+            <p><span>4</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u305" class="ax_default table_cell">
-          <img id="u305_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <img id="u305_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u305_text" class="text ">
-            <p><span>빌링시스템 문구</span></p>
+            <p><span>요금미납&nbsp; &nbsp;&nbsp; </span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u306" class="ax_default table_cell">
-          <img id="u306_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <img id="u306_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u306_text" class="text ">
-            <p><span>POQ 결제 실패[[414] </span></p>
+            <p><span>5</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u307" class="ax_default table_cell">
-          <img id="u307_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <img id="u307_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u307_text" class="text ">
-            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+            <p><span>분실, 해지 또는 사용정지된 휴대폰 </span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u308" class="ax_default table_cell">
-          <img id="u308_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <img id="u308_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u308_text" class="text ">
-            <p><span>POQ 결제 실패[[1002]</span></p>
+            <p><span>6</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u309" class="ax_default table_cell">
-          <img id="u309_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <img id="u309_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u309_text" class="text ">
-            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+            <p><span>분실, 도난 또는 거래불가 카드</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u310" class="ax_default table_cell">
-          <img id="u310_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <img id="u310_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
           <div id="u310_text" class="text ">
-            <p><span>POQ 결제 실패[[1003]</span></p>
+            <p><span>7</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u311" class="ax_default table_cell">
-          <img id="u311_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <img id="u311_img" class="img " src="images/정기상품__결제대기_상태안내__2/u226.png"/>
           <div id="u311_text" class="text ">
-            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u312" class="ax_default table_cell">
-          <img id="u312_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
-          <div id="u312_text" class="text ">
-            <p><span>POQ 결제 실패[[1006]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u313" class="ax_default table_cell">
-          <img id="u313_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
-          <div id="u313_text" class="text ">
-            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u314" class="ax_default table_cell">
-          <img id="u314_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u314_text" class="text ">
-            <p><span>POQ 결제 실패[[1018]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u315" class="ax_default table_cell">
-          <img id="u315_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u315_text" class="text ">
-            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u316" class="ax_default table_cell">
-          <img id="u316_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u316_text" class="text ">
-            <p><span>POQ 결제 실패[[1025]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u317" class="ax_default table_cell">
-          <img id="u317_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u317_text" class="text ">
-            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u318" class="ax_default table_cell">
-          <img id="u318_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u318_text" class="text ">
-            <p><span>POQ 결제 실패[[1032]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u319" class="ax_default table_cell">
-          <img id="u319_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u319_text" class="text ">
-            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u320" class="ax_default table_cell">
-          <img id="u320_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u320_text" class="text ">
-            <p><span>POQ 결제 실패[[1071]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u321" class="ax_default table_cell">
-          <img id="u321_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u321_text" class="text ">
-            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u322" class="ax_default table_cell">
-          <img id="u322_img" class="img " src="images/정기상품__결제대기_상태안내__2/u229.png"/>
-          <div id="u322_text" class="text ">
-            <p><span>...</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u323" class="ax_default table_cell">
-          <img id="u323_img" class="img " src="images/정기상품__결제대기_상태안내__2/u230.png"/>
-          <div id="u323_text" class="text ">
-            <p><span>상세케이스 추가 확인필요</span></p>
+            <p><span>기타 - 고객센터로 문의해 주세요.</span></p>
           </div>
         </div>
       </div>
