--- a/정기상품__결제대기_상태안내__2.html
+++ b/정기상품__결제대기_상태안내__2.html
@@ -41,7 +41,7 @@
         <div id="u211" class="ax_default table_cell">
           <img id="u211_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
           <div id="u211_text" class="text ">
-            <p><span>결제실패 코드</span></p>
+            <p><span>No.</span></p>
           </div>
         </div>
 
@@ -49,7 +49,7 @@
         <div id="u212" class="ax_default table_cell">
           <img id="u212_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
           <div id="u212_text" class="text ">
-            <p><span>빌링시스템 문구</span></p>
+            <p><span>프론트에 노출될 에러메시지</span></p>
           </div>
         </div>
 
@@ -57,7 +57,7 @@
         <div id="u213" class="ax_default table_cell">
           <img id="u213_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u213_text" class="text ">
-            <p><span>POQ 결제 실패[[414] </span></p>
+            <p><span>1</span></p>
           </div>
         </div>
 
@@ -65,7 +65,7 @@
         <div id="u214" class="ax_default table_cell">
           <img id="u214_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u214_text" class="text ">
-            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
+            <p><span>소액결제 이용 차단 또는 이용불가&nbsp; &nbsp; &nbsp; </span></p>
           </div>
         </div>
 
@@ -73,7 +73,7 @@
         <div id="u215" class="ax_default table_cell">
           <img id="u215_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u215_text" class="text ">
-            <p><span>POQ 결제 실패[[1002]</span></p>
+            <p><span>2</span></p>
           </div>
         </div>
 
@@ -81,7 +81,7 @@
         <div id="u216" class="ax_default table_cell">
           <img id="u216_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u216_text" class="text ">
-            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
+            <p><span>결제수단 정보 및 가입자 정보 불일치 </span></p>
           </div>
         </div>
 
@@ -89,7 +89,7 @@
         <div id="u217" class="ax_default table_cell">
           <img id="u217_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u217_text" class="text ">
-            <p><span>POQ 결제 실패[[1003]</span></p>
+            <p><span>3</span></p>
           </div>
         </div>
 
@@ -97,7 +97,7 @@
         <div id="u218" class="ax_default table_cell">
           <img id="u218_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u218_text" class="text ">
-            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
+            <p><span>한도 초과 또는 잔액부족</span></p>
           </div>
         </div>
 
@@ -105,7 +105,7 @@
         <div id="u219" class="ax_default table_cell">
           <img id="u219_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
           <div id="u219_text" class="text ">
-            <p><span>POQ 결제 실패[[1006]</span></p>
+            <p><span>4</span></p>
           </div>
         </div>
 
@@ -113,7 +113,7 @@
         <div id="u220" class="ax_default table_cell">
           <img id="u220_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
           <div id="u220_text" class="text ">
-            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
+            <p><span>요금미납&nbsp; &nbsp;&nbsp; </span></p>
           </div>
         </div>
 
@@ -121,7 +121,7 @@
         <div id="u221" class="ax_default table_cell">
           <img id="u221_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u221_text" class="text ">
-            <p><span>POQ 결제 실패[[1018]</span></p>
+            <p><span>5</span></p>
           </div>
         </div>
 
@@ -129,7 +129,7 @@
         <div id="u222" class="ax_default table_cell">
           <img id="u222_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u222_text" class="text ">
-            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
+            <p><span>분실, 해지 또는 사용정지된 휴대폰 </span></p>
           </div>
         </div>
 
@@ -137,7 +137,7 @@
         <div id="u223" class="ax_default table_cell">
           <img id="u223_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u223_text" class="text ">
-            <p><span>POQ 결제 실패[[1025]</span></p>
+            <p><span>6</span></p>
           </div>
         </div>
 
@@ -145,211 +145,179 @@
         <div id="u224" class="ax_default table_cell">
           <img id="u224_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u224_text" class="text ">
-            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
+            <p><span>분실, 도난 또는 거래불가 카드</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u225" class="ax_default table_cell">
-          <img id="u225_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <img id="u225_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
           <div id="u225_text" class="text ">
-            <p><span>POQ 결제 실패[[1032]</span></p>
+            <p><span>7</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u226" class="ax_default table_cell">
-          <img id="u226_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <img id="u226_img" class="img " src="images/정기상품__결제대기_상태안내__2/u226.png"/>
           <div id="u226_text" class="text ">
-            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u227" class="ax_default table_cell">
-          <img id="u227_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u227_text" class="text ">
-            <p><span>POQ 결제 실패[[1071]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u228" class="ax_default table_cell">
-          <img id="u228_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u228_text" class="text ">
-            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u229" class="ax_default table_cell">
-          <img id="u229_img" class="img " src="images/정기상품__결제대기_상태안내__2/u229.png"/>
-          <div id="u229_text" class="text ">
-            <p><span>...</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u230" class="ax_default table_cell">
-          <img id="u230_img" class="img " src="images/정기상품__결제대기_상태안내__2/u230.png"/>
-          <div id="u230_text" class="text ">
-            <p><span>상세케이스 추가 확인필요</span></p>
+            <p><span>기타 - 고객센터로 문의해 주세요.</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u231" class="ax_default box_1">
-        <div id="u231_div" class=""></div>
+      <div id="u227" class="ax_default box_1">
+        <div id="u227_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u232" class="ax_default box_1">
-        <div id="u232_div" class=""></div>
-        <div id="u232_text" class="text ">
+      <div id="u228" class="ax_default box_1">
+        <div id="u228_div" class=""></div>
+        <div id="u228_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u233" class="ax_default line">
-        <img id="u233_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u229" class="ax_default line">
+        <img id="u229_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u234" class="ax_default heading_1">
-        <div id="u234_div" class=""></div>
-        <div id="u234_text" class="text ">
+      <div id="u230" class="ax_default heading_1">
+        <div id="u230_div" class=""></div>
+        <div id="u230_text" class="text ">
           <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u235" class="ax_default box_1">
-        <img id="u235_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u235_text" class="text ">
+      <div id="u231" class="ax_default box_1">
+        <img id="u231_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u231_text" class="text ">
           <p><span>정기 이용권 : 결제대기</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u236" class="ax_default line">
-        <img id="u236_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u232" class="ax_default line">
+        <img id="u232_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u237" class="ax_default box_1">
-        <img id="u237_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u237_text" class="text ">
+      <div id="u233" class="ax_default box_1">
+        <img id="u233_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u233_text" class="text ">
           <p><span>사용중인 이용권</span></p>
         </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u234" class="ax_default box_1">
+        <div id="u234_div" class=""></div>
+        <div id="u234_text" class="text ">
+          <p><span>이용권구매</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u235" class="ax_default box_1">
+        <div id="u235_div" class=""></div>
+        <div id="u235_text" class="text ">
+          <p><span>쿠폰 등록하기</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Ellipse) -->
+      <div id="u236" class="ax_default ellipse">
+        <img id="u236_img" class="img " src="images/정기상품__결제대기_상태안내__2/u236.png"/>
+        <div id="u236_text" class="text ">
+          <p><span>엠넷닷컴</span></p><p><span>앱설치</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u237" class="ax_default paragraph">
+        <div id="u237_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u238" class="ax_default box_1">
         <div id="u238_div" class=""></div>
         <div id="u238_text" class="text ">
-          <p><span>이용권구매</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u239" class="ax_default box_1">
-        <div id="u239_div" class=""></div>
-        <div id="u239_text" class="text ">
-          <p><span>쿠폰 등록하기</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Ellipse) -->
-      <div id="u240" class="ax_default ellipse">
-        <img id="u240_img" class="img " src="images/정기상품__결제대기_상태안내__2/u240.png"/>
-        <div id="u240_text" class="text ">
-          <p><span>엠넷닷컴</span></p><p><span>앱설치</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u241" class="ax_default paragraph">
-        <div id="u241_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u242" class="ax_default box_1">
-        <div id="u242_div" class=""></div>
-        <div id="u242_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u243" class="ax_default heading_1">
-        <div id="u243_div" class=""></div>
-        <div id="u243_text" class="text ">
+      <div id="u239" class="ax_default heading_1">
+        <div id="u239_div" class=""></div>
+        <div id="u239_text" class="text ">
           <p><span>[정기] 듣기+MP3 30</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u244" class="ax_default heading_1">
-        <div id="u244_div" class=""></div>
-        <div id="u244_text" class="text ">
-          <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
+      <div id="u240" class="ax_default heading_1">
+        <div id="u240_div" class=""></div>
+        <div id="u240_text" class="text ">
+          <p><span>현재 정기 상품의 자동 결제가 정상 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u245" class="ax_default box_1">
-        <div id="u245_div" class=""></div>
-        <div id="u245_text" class="text ">
+      <div id="u241" class="ax_default box_1">
+        <div id="u241_div" class=""></div>
+        <div id="u241_text" class="text ">
           <p><span>정기 결제 관리</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u246" class="ax_default heading_1">
-        <div id="u246_div" class=""></div>
-        <div id="u246_text" class="text ">
+      <div id="u242" class="ax_default heading_1">
+        <div id="u242_div" class=""></div>
+        <div id="u242_text" class="text ">
           <p><span>사용중인 이용권이 없습니다. </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u247" class="ax_default line">
-        <img id="u247_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
+      <div id="u243" class="ax_default line">
+        <img id="u243_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u248" class="ax_default line">
-        <img id="u248_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u244" class="ax_default line">
+        <img id="u244_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u249" class="ax_default box_1">
-        <img id="u249_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u249_text" class="text ">
+      <div id="u245" class="ax_default box_1">
+        <img id="u245_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u245_text" class="text ">
           <p><span>보관중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u250" class="ax_default box_1">
-        <div id="u250_div" class=""></div>
+      <div id="u246" class="ax_default box_1">
+        <div id="u246_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u250_ann" class="annotation"></div>
+      <div id="u246_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u251" class="ax_default box_1">
-        <div id="u251_div" class=""></div>
-        <div id="u251_text" class="text ">
+      <div id="u247" class="ax_default box_1">
+        <div id="u247_div" class=""></div>
+        <div id="u247_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u251_ann" class="annotation"></div>
+      <div id="u247_ann" class="annotation"></div>
     </div>
   </body>
 </html>
