--- a/정기상품__결제대기_상태안내__3.html
+++ b/정기상품__결제대기_상태안내__3.html
@@ -25,46 +25,46 @@
     <div id="base" class="">
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u347" class="ax_default box_1">
-        <div id="u347_div" class=""></div>
-        <div id="u347_text" class="text ">
-          <p><span style="font-family:'나눔고딕';font-weight:400;">정기 상품을 이용 중이나, 명의변경, 번호변경 등의 문제로 정기 상품의 결제가 정상적으로 이루어 지지 않았을 경우 </span><span style="font-family:'나눔고딕 Bold', '나눔고딕 Regular', '나눔고딕';font-weight:600;text-decoration:underline;">현상태 및 사유 안내 추가</span></p>
+      <div id="u335" class="ax_default box_1">
+        <div id="u335_div" class=""></div>
+        <div id="u335_text" class="text ">
+          <p><span style="font-family:'나눔고딕';font-weight:400;">정기 상품을 이용 중이나, 명의변경, 번호변경 등의 문제로 정기 상품의 결제가 정상적으로 이루어 지지 않았을 경우 </span><span style="font-family:'나눔고딕 Bold', '나눔고딕';font-weight:600;text-decoration:underline;">현상태 및 사유 안내 추가</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u348" class="ax_default box_1">
-        <div id="u348_div" class=""></div>
+      <div id="u336" class="ax_default box_1">
+        <div id="u336_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u349" class="ax_default box_1">
-        <div id="u349_div" class=""></div>
-        <div id="u349_text" class="text ">
+      <div id="u337" class="ax_default box_1">
+        <div id="u337_div" class=""></div>
+        <div id="u337_text" class="text ">
           <p><span>Status Bar</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u350" class="ax_default box_1">
-        <div id="u350_div" class=""></div>
-        <div id="u350_text" class="text ">
+      <div id="u338" class="ax_default box_1">
+        <div id="u338_div" class=""></div>
+        <div id="u338_text" class="text ">
           <p><span>이용권구매</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u351" class="ax_default box_1">
-        <div id="u351_div" class=""></div>
-        <div id="u351_text" class="text ">
+      <div id="u339" class="ax_default box_1">
+        <div id="u339_div" class=""></div>
+        <div id="u339_text" class="text ">
           <p><span>쿠폰 등록하기</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Ellipse) -->
-      <div id="u352" class="ax_default ellipse">
-        <img id="u352_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u188.png"/>
-        <div id="u352_text" class="text ">
+      <div id="u340" class="ax_default ellipse">
+        <img id="u340_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u188.png"/>
+        <div id="u340_text" class="text ">
           <p><span>X</span></p>
         </div>
       </div>
@@ -72,276 +72,244 @@
       <!-- Unnamed (자동결제 실패사유) -->
 
       <!-- Unnamed (Table) -->
-      <div id="u354" class="ax_default table">
+      <div id="u342" class="ax_default table">
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u343" class="ax_default table_cell">
+          <img id="u343_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <div id="u343_text" class="text ">
+            <p><span>No.</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u344" class="ax_default table_cell">
+          <img id="u344_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <div id="u344_text" class="text ">
+            <p><span>프론트에 노출될 에러메시지</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u345" class="ax_default table_cell">
+          <img id="u345_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u345_text" class="text ">
+            <p><span>1</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u346" class="ax_default table_cell">
+          <img id="u346_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u346_text" class="text ">
+            <p><span>소액결제 이용 차단 또는 이용불가&nbsp; &nbsp; &nbsp; </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u347" class="ax_default table_cell">
+          <img id="u347_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u347_text" class="text ">
+            <p><span>2</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u348" class="ax_default table_cell">
+          <img id="u348_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u348_text" class="text ">
+            <p><span>결제수단 정보 및 가입자 정보 불일치 </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u349" class="ax_default table_cell">
+          <img id="u349_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u349_text" class="text ">
+            <p><span>3</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u350" class="ax_default table_cell">
+          <img id="u350_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u350_text" class="text ">
+            <p><span>한도 초과 또는 잔액부족</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u351" class="ax_default table_cell">
+          <img id="u351_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <div id="u351_text" class="text ">
+            <p><span>4</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u352" class="ax_default table_cell">
+          <img id="u352_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <div id="u352_text" class="text ">
+            <p><span>요금미납&nbsp; &nbsp;&nbsp; </span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u353" class="ax_default table_cell">
+          <img id="u353_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
+          <div id="u353_text" class="text ">
+            <p><span>5</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (Table Cell) -->
+        <div id="u354" class="ax_default table_cell">
+          <img id="u354_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
+          <div id="u354_text" class="text ">
+            <p><span>분실, 해지 또는 사용정지된 휴대폰 </span></p>
+          </div>
+        </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u355" class="ax_default table_cell">
-          <img id="u355_img" class="img " src="images/정기상품__결제대기_상태안내__2/u211.png"/>
+          <img id="u355_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
           <div id="u355_text" class="text ">
-            <p><span>결제실패 코드</span></p>
+            <p><span>6</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u356" class="ax_default table_cell">
-          <img id="u356_img" class="img " src="images/정기상품__결제대기_상태안내__2/u212.png"/>
+          <img id="u356_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
           <div id="u356_text" class="text ">
-            <p><span>빌링시스템 문구</span></p>
+            <p><span>분실, 도난 또는 거래불가 카드</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u357" class="ax_default table_cell">
-          <img id="u357_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
+          <img id="u357_img" class="img " src="images/정기상품__결제대기_상태안내__2/u225.png"/>
           <div id="u357_text" class="text ">
-            <p><span>POQ 결제 실패[[414] </span></p>
+            <p><span>7</span></p>
           </div>
         </div>
 
         <!-- Unnamed (Table Cell) -->
         <div id="u358" class="ax_default table_cell">
-          <img id="u358_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
+          <img id="u358_img" class="img " src="images/정기상품__결제대기_상태안내__2/u226.png"/>
           <div id="u358_text" class="text ">
-            <p><span>통신 요금 미납으로 휴대폰결제 서비스 이용이 불가능합니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u359" class="ax_default table_cell">
-          <img id="u359_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
-          <div id="u359_text" class="text ">
-            <p><span>POQ 결제 실패[[1002]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u360" class="ax_default table_cell">
-          <img id="u360_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
-          <div id="u360_text" class="text ">
-            <p><span>가입자 주민번호 오류입니다. 정확한 주민번호 확인 후 다시 시도 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u361" class="ax_default table_cell">
-          <img id="u361_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u361_text" class="text ">
-            <p><span>POQ 결제 실패[[1003]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u362" class="ax_default table_cell">
-          <img id="u362_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u362_text" class="text ">
-            <p><span>분실 및 사용정지 등록된 폰으로는 결제가 불가합니다. (분실/사용정지 확인 : 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u363" class="ax_default table_cell">
-          <img id="u363_img" class="img " src="images/정기상품__결제대기_상태안내__2/u213.png"/>
-          <div id="u363_text" class="text ">
-            <p><span>POQ 결제 실패[[1006]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u364" class="ax_default table_cell">
-          <img id="u364_img" class="img " src="images/정기상품__결제대기_상태안내__2/u214.png"/>
-          <div id="u364_text" class="text ">
-            <p><span>요금 미납으로 결제 불가합니다. 통신사로 납부 후 재시도 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u365" class="ax_default table_cell">
-          <img id="u365_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u365_text" class="text ">
-            <p><span>POQ 결제 실패[[1018]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u366" class="ax_default table_cell">
-          <img id="u366_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u366_text" class="text ">
-            <p><span>소액결제 차단을 요청하신 번호입니다. 통신사 홈페이지에서 자동결제 차단 해제 후 이용 부탁드립니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u367" class="ax_default table_cell">
-          <img id="u367_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u367_text" class="text ">
-            <p><span>POQ 결제 실패[[1025]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u368" class="ax_default table_cell">
-          <img id="u368_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u368_text" class="text ">
-            <p><span>당월 한도 초과로 결제 불가합니다. 익월에 다시 이용해주시기 바랍니다. (한도 확인 휴대폰 국번없이114)</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u369" class="ax_default table_cell">
-          <img id="u369_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u369_text" class="text ">
-            <p><span>POQ 결제 실패[[1032]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u370" class="ax_default table_cell">
-          <img id="u370_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u370_text" class="text ">
-            <p><span>휴대폰소액결제 차단을 설정한 번호입니다. 차단해제를 하신 뒤 이용해 주시기 바랍니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u371" class="ax_default table_cell">
-          <img id="u371_img" class="img " src="images/정기상품__결제대기_상태안내__2/u217.png"/>
-          <div id="u371_text" class="text ">
-            <p><span>POQ 결제 실패[[1071]</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u372" class="ax_default table_cell">
-          <img id="u372_img" class="img " src="images/정기상품__결제대기_상태안내__2/u218.png"/>
-          <div id="u372_text" class="text ">
-            <p><span>등록된 자동결제 거래정보가 존재하지 않습니다.</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u373" class="ax_default table_cell">
-          <img id="u373_img" class="img " src="images/정기상품__결제대기_상태안내__2/u229.png"/>
-          <div id="u373_text" class="text ">
-            <p><span>...</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (Table Cell) -->
-        <div id="u374" class="ax_default table_cell">
-          <img id="u374_img" class="img " src="images/정기상품__결제대기_상태안내__2/u230.png"/>
-          <div id="u374_text" class="text ">
-            <p><span>상세케이스 추가 확인필요</span></p>
+            <p><span>기타 - 고객센터로 문의해 주세요.</span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u375" class="ax_default line">
-        <img id="u375_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u359" class="ax_default line">
+        <img id="u359_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u376" class="ax_default heading_1">
-        <div id="u376_div" class=""></div>
-        <div id="u376_text" class="text ">
+      <div id="u360" class="ax_default heading_1">
+        <div id="u360_div" class=""></div>
+        <div id="u360_text" class="text ">
           <p><span>&#149; 기존에 스트리밍 이용권을 보유한 상태에서 스트리밍이 포함됨 </span></p><p><span>&nbsp;&nbsp;&nbsp; 다른 이용권을 구매했을 경우</span></p><p><span>&#149; 스트리밍 기간은 기존 이용권의 기간이 만료된 직후부터 적용됩니다.</span></p><p><span>&#149; 다운로드 기간은 구매 시점과 동시에 적용됩니다.</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u377" class="ax_default box_1">
-        <img id="u377_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u377_text" class="text ">
+      <div id="u361" class="ax_default box_1">
+        <img id="u361_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u361_text" class="text ">
           <p><span>정기 이용권 : 결제대기</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u378" class="ax_default line">
-        <img id="u378_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u362" class="ax_default line">
+        <img id="u362_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u379" class="ax_default box_1">
-        <img id="u379_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u379_text" class="text ">
+      <div id="u363" class="ax_default box_1">
+        <img id="u363_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u363_text" class="text ">
           <p><span>사용중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u380" class="ax_default paragraph">
-        <div id="u380_div" class=""></div>
+      <div id="u364" class="ax_default paragraph">
+        <div id="u364_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u381" class="ax_default heading_1">
-        <div id="u381_div" class=""></div>
-        <div id="u381_text" class="text ">
+      <div id="u365" class="ax_default heading_1">
+        <div id="u365_div" class=""></div>
+        <div id="u365_text" class="text ">
           <p><span>[정기] 듣기+MP3 30</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u382" class="ax_default heading_1">
-        <div id="u382_div" class=""></div>
-        <div id="u382_text" class="text ">
+      <div id="u366" class="ax_default heading_1">
+        <div id="u366_div" class=""></div>
+        <div id="u366_text" class="text ">
           <p><span>현재 정기 상품의 자동결제가 처리되지 않아 결제대기입니다. </span></p><p><span>사유 : $결제수단 명의변경</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u383" class="ax_default box_1">
-        <div id="u383_div" class=""></div>
-        <div id="u383_text" class="text ">
+      <div id="u367" class="ax_default box_1">
+        <div id="u367_div" class=""></div>
+        <div id="u367_text" class="text ">
           <p><span>정기 결제 관리</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u384" class="ax_default heading_1">
-        <div id="u384_div" class=""></div>
-        <div id="u384_text" class="text ">
+      <div id="u368" class="ax_default heading_1">
+        <div id="u368_div" class=""></div>
+        <div id="u368_text" class="text ">
           <p><span>사용중인 이용권이 없습니다. </span></p>
         </div>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u385" class="ax_default line">
-        <img id="u385_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
+      <div id="u369" class="ax_default line">
+        <img id="u369_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u180.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
-      <div id="u386" class="ax_default line">
-        <img id="u386_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
+      <div id="u370" class="ax_default line">
+        <img id="u370_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u179.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u387" class="ax_default box_1">
-        <img id="u387_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
-        <div id="u387_text" class="text ">
+      <div id="u371" class="ax_default box_1">
+        <img id="u371_img" class="img " src="images/다운로드_상품__잔여곡수_추가__3/u182.png"/>
+        <div id="u371_text" class="text ">
           <p><span>보관중인 이용권</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u388" class="ax_default box_1">
-        <div id="u388_div" class=""></div>
+      <div id="u372" class="ax_default box_1">
+        <div id="u372_div" class=""></div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u388_ann" class="annotation"></div>
+      <div id="u372_ann" class="annotation"></div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u389" class="ax_default box_1">
-        <div id="u389_div" class=""></div>
-        <div id="u389_text" class="text ">
+      <div id="u373" class="ax_default box_1">
+        <div id="u373_div" class=""></div>
+        <div id="u373_text" class="text ">
           <p><span>CASE</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) [footnote] -->
-      <div id="u389_ann" class="annotation"></div>
+      <div id="u373_ann" class="annotation"></div>
     </div>
   </body>
 </html>
